[package]
name = "evaluations"
version = "0.1.0"
authors = ["Eusebio Durán Montaña <eusebioDM98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
actix-web = "1.0.3"
futures = "0.1"
iso3166-1 = "1.0.1"
mime = "0.3.14"
chrono = "0.4.0"
iata-types = "0.1.4"
http = "0.1"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono", "numeric"] }
r2d2 = "0.8"
dotenv = "0.15.0"
evalexpr = "5"